testsuite/escript/classes/fail-self-base.src
// A class cannot reference itself as a base class.

class Animal(Animal)
  function Animal( this ) endfunction
endclass

Animal();
